--- a/res/layout/activity_job_details.xml
+++ b/res/layout/activity_job_details.xml
@@ -11,184 +11,246 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/menu_item_title"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@color/deep_grew_bg"
-        android:gravity="center_vertical" >
-
-        <TextView
-            android:id="@+id/job_title"
-            style="@style/menu_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/jobs_title" />
-    </RelativeLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/white_bg"
-        android:scrollbars="none" >
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/main_menu_item_padding"
+        android:paddingRight="@dimen/main_menu_item_padding" >
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:contentDescription="@string/main_bg_img_des"
+            android:src="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/right_menu_btn"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/main_bg_img_des"
+            android:onClick="backToMainNenu"
+            android:src="@drawable/menu" />
+
+        <ImageView
+            android:id="@+id/left_ope_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/main_bg_img_des"
+            android:onClick="ownOperation"
+            android:src="@drawable/back" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/menu_item_title"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@color/deep_grew_bg"
+            android:gravity="center_vertical" >
+
+            <TextView
+                android:id="@+id/job_title"
+                style="@style/menu_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/jobs_title" />
+        </RelativeLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@color/white_bg"
+            android:scrollbars="none" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dialog_text_padding"
                 android:orientation="vertical" >
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:paddingBottom="@dimen/main_menu_item_padding"
-                    android:paddingTop="@dimen/main_menu_item_padding" >
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:contentDescription="@string/main_bg_img_des"
-                        android:src="@drawable/location" />
-
-                    <TextView
-                        android:id="@+id/location_value"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/main_menu_item_padding"
-                        android:layout_toLeftOf="@+id/textView1"
-                        android:text="ss" />
-
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/main_menu_item_padding"
-                        android:layout_toLeftOf="@+id/imageView1"
-                        android:text="@string/location_title"
-                        android:textColor="@color/red_light" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:paddingBottom="@dimen/main_menu_item_padding"
-                    android:paddingTop="@dimen/main_menu_item_padding" >
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:contentDescription="@string/main_bg_img_des"
-                        android:src="@drawable/experience" />
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/main_menu_item_padding"
-                        android:layout_toLeftOf="@+id/imageView2"
-                        android:text="@string/experience_title"
-                        android:textColor="@color/red_light" />
-
-                    <TextView
-                        android:id="@+id/experience_value"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/main_menu_item_padding"
-                        android:layout_toLeftOf="@+id/textView2"
-                        android:text="ss" />
-                </RelativeLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/main_menu_item_padding"
-                android:layout_marginRight="@dimen/main_menu_item_padding"
-                android:background="@color/light_grew_bg"
-                android:orientation="vertical" >
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/job_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dialog_text_padding"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/main_menu_item_padding"
-                android:paddingTop="@dimen/main_menu_item_padding" >
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dialog_text_padding"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/main_menu_item_padding"
-                android:paddingTop="@dimen/main_menu_item_padding" >
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:paddingBottom="@dimen/main_menu_item_padding"
-                    android:paddingTop="@dimen/main_menu_item_padding" >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:text="@string/requirements_title"
-                        android:textColor="@color/red_light" />
-                </RelativeLayout>
 
                 <LinearLayout
-                    android:id="@+id/requirement_items"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/dialog_text_padding"
                     android:orientation="vertical" >
-                </LinearLayout>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/menu_item_title"
-                android:orientation="vertical" >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding" >
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:contentDescription="@string/main_bg_img_des"
+                            android:src="@drawable/location" />
+
+                        <TextView
+                            android:id="@+id/location_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="@dimen/main_menu_item_padding"
+                            android:layout_toLeftOf="@+id/textView1"
+                            android:text="ss" />
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="@dimen/main_menu_item_padding"
+                            android:layout_toLeftOf="@+id/imageView1"
+                            android:text="@string/location_title"
+                            android:textColor="@color/red_light" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding" >
+
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:contentDescription="@string/main_bg_img_des"
+                            android:src="@drawable/experience" />
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="@dimen/main_menu_item_padding"
+                            android:layout_toLeftOf="@+id/imageView2"
+                            android:text="@string/experience_title"
+                            android:textColor="@color/red_light" />
+
+                        <TextView
+                            android:id="@+id/experience_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="@dimen/main_menu_item_padding"
+                            android:layout_toLeftOf="@+id/textView2"
+                            android:text="ss" />
+                    </RelativeLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginLeft="@dimen/main_menu_item_padding"
+                    android:layout_marginRight="@dimen/main_menu_item_padding"
                     android:background="@color/light_grew_bg"
                     android:orientation="vertical" >
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/send_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/grey_item_bg"
-                    android:gravity="center"
+                    android:layout_marginRight="@dimen/dialog_text_padding"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/main_menu_item_padding"
                     android:paddingTop="@dimen/main_menu_item_padding" >
+
+                    <TextView
+                        android:id="@+id/job_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/dialog_text_padding"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/main_menu_item_padding"
+                    android:paddingTop="@dimen/main_menu_item_padding" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding" >
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:text="@string/requirements_title"
+                            android:textColor="@color/red_light" />
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:id="@+id/requirement_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/menu_item_title"
+                    android:orientation="vertical" >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/light_grew_bg"
+                        android:orientation="vertical" >
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/grey_item_bg"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding"
+                        android:visibility="visible" >
+
+                        <TextView
+                            android:id="@+id/send_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="ss" />
+
+                        <TextView
+                            android:layout_width="@dimen/main_menu_item_padding"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/email_title" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
